--- a/arduino_controller/platformio.ini
+++ b/arduino_controller/platformio.ini
@@ -5,6 +5,10 @@ framework = arduino
 
 ; Скорость монитора порта для отладки
 monitor_speed = 115200
-
 ; Скорость прошивки (по умолчанию для Uno 115200)
 upload_speed = 115200
+
+build_flags =
+    -I ../common
+
+lib_extra_dirs = ../common
