--- a/win_audio_parser/CMakeLists.txt
+++ b/win_audio_parser/CMakeLists.txt
@@ -4,9 +4,6 @@ project(WinAudioParser LANGUAGES C CXX)
 # Глобальные настройки
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-# Заставляем CMake писать полные команды в compile_commands.json (для IDE)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES OFF)
 
 # === 1. УДАЛЕННЫЕ ЗАВИСИМОСТИ ===
 include(FetchContent)
@@ -17,24 +14,37 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(kissfft)
 
+# print path for debugging
+message(STATUS "kissfft_SOURCE_DIR='${kissfft_SOURCE_DIR}'")
+
 # === 2. ВАШЕ ПРИЛОЖЕНИЕ (ЦЕЛЬ) ===
-add_executable(${PROJECT_NAME} "src/main.cpp")
+add_executable(${PROJECT_NAME}
+    "src/main.cpp"
+    "${kissfft_SOURCE_DIR}/kiss_fft.c"
+    "${kissfft_SOURCE_DIR}/tools/kiss_fftr.c"
+)
+
+# ensure C sources are treated as C (not C++)
+set_source_files_properties(
+    "${kissfft_SOURCE_DIR}/kiss_fft.c"
+    "${kissfft_SOURCE_DIR}/tools/kiss_fftr.c"
+    PROPERTIES LANGUAGE C
+)
 
 # === 3. ЛОКАЛЬНЫЕ ПУТИ ===
 # Вычисляем красивый абсолютный путь к общей папке
 file(REAL_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../common" COMMON_DIR)
 
-# Привязываем пути ТОЛЬКО к нашей цели (PRIVATE означает "только для сборки этой цели")
 target_include_directories(${PROJECT_NAME} PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/src"
-    "${CMAKE_CURRENT_SOURCE_DIR}/lib/miniaudio"
-    "${COMMON_DIR}"
+    ${COMMON_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/lib/miniaudio
+    ${kissfft_SOURCE_DIR}
+    ${kissfft_SOURCE_DIR}/tools
 )
 
 # === 4. ЛИНКОВКА ===
-# Объединяем наше приложение, системные либы Windows и удаленный kissfft
 target_link_libraries(${PROJECT_NAME} PRIVATE
     ole32
     winmm
-    kissfft-float
 )
